--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.5.1'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:25.3.0'
+    compile 'com.google.android.gms:play-services-places:10.2.1'
+    compile 'org.parceler:parceler-api:1.1.6'
+    annotationProcessor 'org.parceler:parceler:1.1.6'
 }
