--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,9 +31,13 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.jakewharton:butterknife:8.5.1'
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:25.3.0'
-    compile 'com.google.android.gms:play-services-places:10.2.1'
+    compile 'com.google.android.gms:play-services-places:10.0.1'
     compile 'org.parceler:parceler-api:1.1.6'
+    compile 'com.google.firebase:firebase-database:10.0.1'
+    testCompile 'junit:junit:4.12'
     annotationProcessor 'org.parceler:parceler:1.1.6'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
