--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,8 +50,10 @@ dependencies {
     compile 'com.fasterxml.jackson.core:jackson-databind:2.8.6'
     compile 'com.google.firebase:firebase-auth:10.2.1'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile 'com.google.firebase:firebase-messaging:10.2.1'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'org.parceler:parceler:1.1.6'
 }
+
 
 apply plugin: 'com.google.gms.google-services'
