--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.5.1'
     compile 'com.android.support:design:25.3.0'
     compile 'com.google.android.gms:play-services-places:10.2.1'
+    compile 'com.google.android.gms:play-services-location:10.2.1'
     compile 'org.parceler:parceler-api:1.1.6'
     compile 'com.google.firebase:firebase-database:10.2.1'
     compile 'com.fasterxml.jackson.core:jackson-core:2.8.6'
